--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,8 +2,12 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This template package does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 7.10.0:
+What's new in ver. 7.10.1:
 --------------------------
+Fix release.
+
+v7.10.0:
+
 Templates updated to support .NET MAUI 10 RC2 and .NET MAUI 9 SR11.1.
 
 Support for implicit namespace option in project templates when targeting .NET MAUI 10.
