--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -2,8 +2,14 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 7.12.0.0:
+What's new in ver. 7.13.0.0:
 ----------------------------
+The UI text updated to indicate that Aspire integration is available for earlier versions of .NET MAUI, also.
+
+In the next version, the default Framework value will be updated to net10.0 to support .NET 10.
+
+v7.12.0.0:
+
 Aspire integration is no longer limited to being a .NET MAUI 10 exclusive feature.
 
 Yes, it's now accessible for earlier versions as well.
