--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -2,8 +2,16 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 This VS extension does not gather any usage or telemetry data, even anonymously, ensuring that you can use it with complete privacy assurance.
 
-What's new in ver. 8.1.0.0:
+What's new in ver. 8.2.0.0:
 ---------------------------
+Templates updated to support .NET MAUI 10 SR3.
+
+For MCL, MauiProgram.cs file is retained in the head project to handle platform-specific configurations.
+
+And its extension is in the MCL to manage the shared configuration.
+
+v8.1.0.0:
+
 Templates updated to support .NET MAUI 10 SR2.
 
 v8.0.0.0:
